--- a/EcommerceAppKotlin/app/src/main/AndroidManifest.xml
+++ b/EcommerceAppKotlin/app/src/main/AndroidManifest.xml
@@ -12,12 +12,14 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
-        <activity android:name=".ShowAllJSONObjectsActivity">
+        <activity android:name=".DownloadingImageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".ShowAllJSONObjectsActivity">
         </activity>
         <activity android:name=".MainActivity">
         </activity>
