--- a/EcommerceAppKotlin/app/src/main/AndroidManifest.xml
+++ b/EcommerceAppKotlin/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
+        <activity android:name=".RVActivity">
+        </activity>
         <activity android:name=".DownloadingImageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
