SignUp dan Login Selesai

--- a/EcommerceAppKotlin2/app/src/main/AndroidManifest.xml
+++ b/EcommerceAppKotlin2/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         </activity>
         <activity android:name=".SignUpLayout">
         </activity>
+        <activity android:name=".HomeScreen">
+        </activity>
     </application>
 
 </manifest>
