--- a/EcommerceAppKotlin2/app/src/main/AndroidManifest.xml
+++ b/EcommerceAppKotlin2/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".HomeScreen">
         </activity>
+        <activity android:name=".FetchEProductsActivity">
+        </activity>
     </application>
 
 </manifest>
