Adding android networking GET

--- a/CekOngkir/app/build.gradle
+++ b/CekOngkir/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
 }
