add to cart + temporary order -> (48)

--- a/EcommerceAppKotlin2/app/src/main/AndroidManifest.xml
+++ b/EcommerceAppKotlin2/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         </activity>
         <activity android:name=".FetchEProductsActivity">
         </activity>
+        <activity android:name=".CartProductsActivity">
+        </activity>
     </application>
 
 </manifest>
