--- a/EcommerceAppKotlin2/app/src/main/AndroidManifest.xml
+++ b/EcommerceAppKotlin2/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".CartProductsActivity">
         </activity>
+        <activity android:name=".FinalizeShoppingActivity">
+        </activity>
     </application>
 
 </manifest>
