--- a/OnlineStoreKotlin/app/src/main/AndroidManifest.xml
+++ b/OnlineStoreKotlin/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".HomeScreen">
+        </activity>
         <activity android:name=".SignUpLayout">
         </activity>
         <activity android:name=".MainActivity">
