Add to cart dialog

--- a/AndroidEcommerce/app/build.gradle
+++ b/AndroidEcommerce/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
+    //elegant number
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+
 }
