--- a/rentalerbe/app/src/main/AndroidManifest.xml
+++ b/rentalerbe/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ProductActivity"></activity>
+        <activity android:name=".ProductActivity" />
+        <activity android:name=".CartActivity"></activity>
     </application>
 
 </manifest>
