--- a/AndroidEcommerce/app/src/main/AndroidManifest.xml
+++ b/AndroidEcommerce/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DrinkActivity"></activity>
+        <activity android:name=".CartActivity"></activity>
+        <activity android:name=".DrinkActivity" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
