--- a/AndroidEcommerce/app/build.gradle
+++ b/AndroidEcommerce/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     implementation 'com.nex3z:notification-badge:1.0.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    implementation project(":aFileChooser")
+
 }
