--- a/rentalerbe/app/src/main/AndroidManifest.xml
+++ b/rentalerbe/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="app.com.rentalerbe">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -35,7 +35,8 @@
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme" />
         <activity android:name=".ProductActivity" />
-        <activity android:name=".CartActivity"></activity>
+        <activity android:name=".CartActivity" />
+        <activity android:name=".FavoriteListActivity"></activity>
     </application>
 
 </manifest>
