Search Activity part 19 masih error

--- a/rentalerbe/app/build.gradle
+++ b/rentalerbe/app/build.gradle
@@ -59,4 +59,6 @@ dependencies {
 
     implementation project(":aFileChooser")
 
+    implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
+
 }
