--- a/rentalerbe/app/src/main/AndroidManifest.xml
+++ b/rentalerbe/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".ProductActivity" />
         <activity android:name=".CartActivity" />
-        <activity android:name=".FavoriteListActivity"></activity>
+        <activity android:name=".FavoriteListActivity" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
